# RayTracer

./: CMakeLists.txt  LICENSE  README.md
include/image/: image_data.hpp  image_loader.hpp  image_viewer.hpp  pbm_loader.hpp  pgm_loader.hpp  ppm_loader.hpp
include/math/: vec3.hpp
include/render/: color.hpp  render_settings.hpp
include/window/: gui.hpp  panels.hpp
includes/math/: colors.hpp  tuples.hpp  utils.hpp
includes/ppm/: ppm_data.hpp  ppm_loader.hpp  ppm_render_settings.hpp  ppm_renderer.hpp
includes/window/: gui.hpp  gui_panels.hpp  window.hpp
res/: image.ppm  output.ppm  test.pbm  test.pgm  test.ppm
src/: main.cpp
src/image/: image_viewer.cpp  pbm_loader.cpp  pgm_loader.cpp  ppm_loader.cpp
src/math/: colors.cpp  tuples.cpp  utils.cpp  vec3.cpp
src/ppm/: ppm_loader.cpp  ppm_renderer.cpp
src/render/: color.cpp
src/window/: gui.cpp  gui_panels.cpp  panels.cpp  window.cpp
tests/: test_colors.cpp  test_tuples.cpp
